custom project bootstrap

--- a/frontend/style/flavor/variables.less
+++ b/frontend/style/flavor/variables.less
@@ -61,13 +61,13 @@
 
 // Submit form
 @btn-primary-color:              #fff;
-@btn-primary-bg:                 #6554c0;
+@btn-primary-bg:                 @brand-primary;
 
 @btn-primary-hover-color:        #fff;
-@btn-primary-hover-bg:           #5243aa;
+@btn-primary-hover-bg:           #334caa;
 
 @btn-primary-active-color:       #fff;
-@btn-primary-active-bg:          #403294;
+@btn-primary-active-bg:          #1f2794;
 
 // Success button
 @btn-success-color:              #fff;
@@ -160,16 +160,16 @@
 
 // Register button
 @navbar-btn-register-color:              #fff;
-@navbar-btn-register-border:             #6554c0;
-@navbar-btn-register-bg:                 #6554c0;
+@navbar-btn-register-border:             @brand-primary;
+@navbar-btn-register-bg:                 @brand-primary;
 
 @navbar-btn-register-hover-color:        #fff;
-@navbar-btn-register-hover-border:       #5243aa;
-@navbar-btn-register-hover-bg:           #5243aa;
+@navbar-btn-register-hover-border: #334caa;
+@navbar-btn-register-hover-bg:           #334caa;
 
 @navbar-btn-register-active-color:       #fff;
-@navbar-btn-register-active-border:      #403294;
-@navbar-btn-register-active-bg:          #403294;
+@navbar-btn-register-active-border:      #1f2794;
+@navbar-btn-register-active-bg:          #1f2794;
 
 @navbar-btn-register-radius:             4px;
 
@@ -208,13 +208,13 @@
 
 //** Primary
 @page-header-btn-primary-color:              #fff;
-@page-header-btn-primary-bg:                 #6554c0;
+@page-header-btn-primary-bg:                 @brand-primary;
 
 @page-header-btn-primary-hover-color:        #fff;
-@page-header-btn-primary-hover-bg:           #8777d9;
+@page-header-btn-primary-hover-bg: #409ed9;
 
 @page-header-btn-primary-active-color:       #fff;
-@page-header-btn-primary-active-bg:          #403294;
+@page-header-btn-primary-active-bg: #1f2794;
 
 // Tabs
 @page-tabs-bg:              transparent;
@@ -349,7 +349,7 @@
 @progress-border-radius:      @border-radius-small;
 
 //** Default progress bar color
-@progress-bar-bg:             #6554c0;
+@progress-bar-bg:             @brand-primary;
 //** Success progress bar color
 @progress-bar-success-bg:     #36b37e;
 //** Warning progress bar color
@@ -426,8 +426,8 @@
 
 @error-icon-color:               #ef5350;
 
-@message-icon-color:             #9575cd;
-@message-info-icon-color:        #9575cd;
+@message-icon-color:             #7499cd;
+@message-info-icon-color: #7499cd;
 @message-success-icon-color:     #81c784;
 
 
@@ -450,7 +450,7 @@
 //
 //##
 
-@thread-unread-badge-color:       #aa00ff;
+@thread-unread-badge-color:       #0884ff;
 
 @thread-global-badge-color:       #3d5afe;
 @thread-pinned-badge-color:       #8c9eff;
@@ -462,13 +462,13 @@
 
 // Diff message
 @threads-diff-color:             #fff;
-@threads-diff-bg:                #6554c0;
+@threads-diff-bg:                @brand-primary;
 
 @threads-diff-hover-color:       #fff;
-@threads-diff-hover-bg:          #5243aa;
+@threads-diff-hover-bg:          #334caa;
 
 @threads-diff-active-color:      #fff;
-@threads-diff-active-bg:         #403294;
+@threads-diff-active-bg:         #1f2794;
 
 
 //== Posts
@@ -478,7 +478,7 @@
 @post-bg:                         @body-bg;
 @post-border:                     #ddd;
 
-@post-unread-label:               #aa00ff;
+@post-unread-label: #0884ff;
 @post-protected-icon:             #bdbdbd;
 
 
