--- a/ansible/roles/initialize_project/templates/conf.d/site.conf.j2
+++ b/ansible/roles/initialize_project/templates/conf.d/site.conf.j2
@@ -42,6 +42,16 @@ server {
         proxy_set_header   X-Forwarded-Host $server_name;
     }
 
+    location /static {
+        autoindex on;
+        alias /var/www/medcube_static;
+    }
+
+    location /media {
+        autoindex on;
+        alias /var/www/medcube_media;
+    }
+
     # Certbot certificate renewal
     location ^~ /.well-known/acme-challenge/ {
         root /var/www/certbot;
